--- a/components/ui/Marquee/Marquee.module.css
+++ b/components/ui/Marquee/Marquee.module.css
@@ -1,12 +1,11 @@
 .root {
   @apply w-full min-w-full relative flex flex-row items-center overflow-hidden py-0;
-  max-height: 320px;
+  min-height: 400px;
 }
 
 .root > div {
   max-height: 320px;
   padding: 0;
-  margin: 0;
 }
 
 .root > div > * > *:nth-child(2) * {
